k8s.yaml
# ====================== muffin-wallet ======================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-wallet
  labels:
    app: muffin-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: muffin-wallet
  template:
    metadata:
      labels:
        app: muffin-wallet
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      volumes:
        - name: application-config-volume
          configMap:
            name: muffin-wallet
      containers:
        - name: muffin-wallet
          image: andrastot/muffin-wallet:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: application-config-volume
              mountPath: /muffin/config
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: muffin-wallet
spec:
  type: ClusterIP
  selector:
    app: muffin-wallet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muffin-wallet
spec:
  ingressClassName: nginx
  rules:
    - host: muffin-wallet.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muffin-wallet
                port:
                  number: 80

# ====================== muffin-currency ======================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-currency
  labels:
    app: muffin-currency
spec:
  replicas: 2
  selector:
    matchLabels:
      app: muffin-currency
  template:
    metadata:
      labels:
        app: muffin-currency
    spec:
      containers:
      - name: muffin-currency
        image: andrastot/muffin-currency:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /rate?from=PLAIN&to=CHOKOLATE
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /rate?from=PLAIN&to=CHOKOLATE
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: muffin-currency
spec:
  selector:
    app: muffin-currency
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8080
  type: ClusterIP

# ====================== monitoring ======================
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: muffin-wallet-monitoring.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector-collector
                port:
                  number: 9090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-egress
  template:
    metadata:
      labels:
        app: monitoring-egress
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: monitoring-egress-config

---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-egress
spec:
  selector:
    app: monitoring-egress
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
