tmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: muffin-wallet-monitoring.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector-collector
                port:
                  number: 9090
